--- a/templates/Datagrid/table-head.html.twig
+++ b/templates/Datagrid/table-head.html.twig
@@ -6,7 +6,7 @@
   <tr>
     {% for column, cell in dgo.cells %}
       {% if (cell.isVisibleNormal and not dgo.extended) or (cell.isVisibleExtended and dgo.extended) %}
-        <th {{ cell.attr('th')|raw }}>
+        <th {{ cell.attr('th', null, column, null)|raw }}>
           {% include '@HBMDatagrid/Datagrid/table-head-th.html.twig' with { 'dgo': dgo, 'cell': cell, 'column': column } only %}
         </th>
       {% endif %}
