Add translation and helper method.

--- a/templates/Menu/actions/navbar-v4-extended.html.twig
+++ b/templates/Menu/actions/navbar-v4-extended.html.twig
@@ -34,7 +34,7 @@
           {% endfor %}
           <div class="dropdown-divider"></div>
           <li class="datagrid-column text-center">
-            <button class="btn btn-secondary" type="submit">{{ dgm.trans('Anwenden') }}</button>
+            <button class="btn btn-secondary" type="submit">{{ dgm.trans('Anwenden', dgo.tdFix) }}</button>
           </li>
         </ul>
       {% endif %}
